--- a/ConnectionStringCreator/ConnectionStringCreator.csproj
+++ b/ConnectionStringCreator/ConnectionStringCreator.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builders\SqlServerConnectionStringBuilder.cs" />
     <Compile Include="ConnectionStringBase.cs" />
     <Compile Include="Descriptors\MemberDescriptor.cs" />
     <Compile Include="Descriptors\PropertyMap.cs" />
