MySql builder added. Unit test added

--- a/ConnectionStringCreator.Test/ConnectionStringCreator.Test.csproj
+++ b/ConnectionStringCreator.Test/ConnectionStringCreator.Test.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Builders\SqlServerConnectionStringBuilderShould.cs" />
+    <Compile Include="Builders\MySqlConnectionStringBuilderShould.cs" />
     <Compile Include="ConnectionStrings\SqlServerConnectionStringShould.cs" />
     <Compile Include="ConnectionStrings\MySqlConnectionStringShould.cs" />
     <Compile Include="Descriptors\MemberDescriptorShould.cs" />
